[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/entities/character/actor.png" type="Texture" id=1]
[ext_resource path="res://src/Scripts/Entities/Actor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="Actor" type="KinematicBody2D" groups=[
"Actor",
"Entity",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Face" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="MovementTween" type="Tween" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="SkipTimer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_completed" from="MovementTween" to="." method="_on_MovementTween_tween_completed"]
[connection signal="tween_started" from="MovementTween" to="." method="_on_MovementTween_tween_started"]
